# code_snippets_custom

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  Packaging.cmake
cmake/systemd/: csc-load-daemon.service
cpp/: CMakeLists.txt
cpp/examples/: timer_example.cpp
cpp/include/utils/: timer.hpp
cpp/old/structure/: array.cpp
cpp/structure/: array
src/: CMakeLists.txt
src/containers/: CMakeLists.txt  lru_cache.cpp
src/daemon/: CMakeLists.txt  load_daemon.cpp  main.cpp
src/daemons/: CMakeLists.txt  load_daemon.cpp
src/examples/: CMakeLists.txt  example_cli.cpp  example_logger.cpp  example_timer.cpp  logger_example.cpp  scope.cpp  timer_example.cpp
src/examples/benchmarks/: generator_value.cpp
src/examples/containers/: example_lru_cache.cpp
src/examples/custom/: double_promotion.cpp  main.cpp
src/examples/daemons/: example_load_daemon.cpp
src/examples/demo/: ring_buffer_demo.cpp
src/examples/other/: example_lru_cache.cpp  example_xor.cpp
src/examples/patterns/: pimpl_example.cpp  sbo_benchmark.cpp
src/examples/pipeline/: pipeline_arp.cpp
src/include/csc/benchmark/: do_not_optimize.hpp
src/include/csc/containers/: lru_cache.hpp
src/include/csc/daemon/: load_daemon.hpp
src/include/csc/patterns/: callback_perfomance.hpp
src/include/csc/patterns/lru_cache/: lru_cache.hpp
src/include/csc/patterns/sbo/: small_buffer_opt.hpp
src/include/csc/pipeline/: arp_tools.hpp  net_packet.hpp  network_protocol_base.hpp  network_protocol_container.hpp  network_types.hpp  pipeline.hpp  protocols.hpp
src/include/csc/sandbox/foo/: foo.hpp
src/include/csc/sandbox/shared_heap/: shared_heap.hpp
src/include/csc/traffic_gen/builder/: packet_builder.hpp
src/include/csc/traffic_gen/builder/layers/: ethernet.hpp
src/include/csc/traffic_gen/common/: byte_utils.hpp
src/include/csc/traffic_gen/stack/: config.hpp
src/include/csc/utils/: base_cli.hpp  generator_value.hpp  logger.hpp  timer.hpp
src/include/utils/: logger.hpp  timer.hpp
src/old/algorithm/sort/: quick_sort_in_place.cpp
src/old/function/text/: reverseWordsInText.cpp
src/patterns/: CMakeLists.txt
src/patterns/ebo/: CMakeLists.txt  ebo_example.cpp
src/patterns/erase_remove/: CMakeLists.txt  erase_remove_benchmark.cpp
src/patterns/lru_cache/: lru_cache.cpp
src/patterns/pimpl/: CMakeLists.txt  main.cpp  pimpl_example.cpp  pimpl_example.hpp
src/patterns/sbo/: CMakeLists.txt  sbo_benchmark.cpp
src/sandbox/: CMakeLists.txt  sandbox.cpp
src/traffic_gen/: CMakeLists.txt  main.cpp
src/traffic_gen/builder/: packet_builder.cpp
src/traffic_gen/builder/layers/: ethernet.cpp
src/utils/: CMakeLists.txt  logger.hpp  timer.hpp
test/: CMakeLists.txt  test_main.cpp
test/utils/: test_logger.cpp  test_timer.cpp
